--- a/aid_employ/android/app/src/main/AndroidManifest.xml
+++ b/aid_employ/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.aid_employ">
    <application
-        android:label="aid_employ"
+        android:label="Aid Employ"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
