--- a/aid_employ/pubspec.yaml
+++ b/aid_employ/pubspec.yaml
@@ -1,5 +1,5 @@
 name: aid_employ
-description: A new Flutter project.
+description: A app to help the needy.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
