--- a/aid_employ/pubspec.yaml
+++ b/aid_employ/pubspec.yaml
@@ -48,7 +48,9 @@ dependencies:
   shared_preferences: ^2.0.15
   uuid: ^4.3.2
   any_link_preview: ^3.0.1
-
+  google_gemini: ^0.1.2
+  google_generative_ai: ^0.2.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
