--- a/aid_employ/pubspec.yaml
+++ b/aid_employ/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   google_gemini: ^0.1.2
   google_generative_ai: ^0.2.0
   delayed_display: ^2.0.0
+  google_maps_flutter: ^2.5.2
   
 dev_dependencies:
   flutter_test:
