Configuration for location access Permission

--- a/aid_employ/pubspec.yaml
+++ b/aid_employ/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   google_generative_ai: ^0.2.0
   delayed_display: ^2.0.0
   google_maps_flutter: ^2.5.2
+  location: ^5.0.3
   
 dev_dependencies:
   flutter_test:
