--- a/aid_employ/android/app/src/main/AndroidManifest.xml
+++ b/aid_employ/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.aid_employ">
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
    <application
         android:label="Aid Employ"
         android:name="${applicationName}"
@@ -31,7 +33,7 @@
             android:name="flutterEmbedding"
             android:value="2" />
          <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="___SECRET - API ___ "
+               android:value="___Secret ___"
                />
     </application>
 </manifest>
