--- a/aid_employ/pubspec.yaml
+++ b/aid_employ/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   delayed_display: ^2.0.0
   google_maps_flutter: ^2.5.2
   location: ^5.0.3
+  flutter_polyline_points: ^2.0.0
   
 dev_dependencies:
   flutter_test:
