--- a/chatbot/requirements.txt
+++ b/chatbot/requirements.txt
@@ -1,43 +1,42 @@
-anyio==4.0.0
-cachecontrol==0.14.0
-cachetools==5.3.2
-certifi==2023.7.22
+anyio==4.3.0
+CacheControl==0.14.0
+cachetools==5.3.3
+certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
-cryptography==42.0.3
-exceptiongroup==1.1.3
-firebase-admin==6.4.0
-google-api-core==2.17.1
-google-api-python-client==2.118.0
-google-auth==2.28.0
+cryptography==42.0.5
+exceptiongroup==1.2.1
+firebase-admin==6.5.0
+google-api-core==2.18.0
+google-api-python-client==2.126.0
+google-auth==2.29.0
 google-auth-httplib2==0.2.0
 google-cloud-core==2.4.1
-google-cloud-firestore==2.14.0
-google-cloud-storage==2.14.0
+google-cloud-firestore==2.16.0
+google-cloud-storage==2.16.0
 google-crc32c==1.5.0
 google-resumable-media==2.7.0
-googleapis-common-protos==1.62.0
-grpcio==1.60.1
-grpcio-status==1.60.1
+googleapis-common-protos==1.63.0
+grpcio==1.62.2
+grpcio-status==1.62.2
 h11==0.14.0
-httpcore==0.17.3
+httpcore==1.0.5
 httplib2==0.22.0
-httpx==0.24.1
-idna==3.4
-msgpack==1.0.7
-Pillow==10.0.0
+httpx==0.27.0
+idna==3.7
+msgpack==1.0.8
 proto-plus==1.23.0
 protobuf==4.25.3
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycparser==2.21
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
 PyJWT==2.8.0
-pyparsing==3.1.1
-python-telegram-bot==20.4
+pyparsing==3.1.2
+python-telegram-bot==21.1.1
 requests==2.31.0
 rsa==4.9
-sniffio==1.3.0
+sniffio==1.3.1
 telegram==0.0.1
+typing_extensions==4.11.0
 uritemplate==4.1.1
-urllib3==2.2.0
-xds-protos==1.60.1
+urllib3==2.2.1
