--- a/aid_employ/pubspec.yaml
+++ b/aid_employ/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   google_maps_flutter: ^2.5.2
   location: ^5.0.3
   flutter_polyline_points: ^2.0.0
+  custom_info_window: ^1.0.1 
   
 dev_dependencies:
   flutter_test:
@@ -82,6 +83,7 @@ flutter:
     - assets/images/loginEmote.png
     - assets/images/logo.png
     - assets/images/awards/
+    - assets/images/Donation_center.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
