--- a/aid_employ/pubspec.yaml
+++ b/aid_employ/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
     - assets/images/logo.png
     - assets/images/awards/
     - assets/images/Donation_center.png
+    - assets/images/userLocation.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
