--- a/aid_employ/pubspec.yaml
+++ b/aid_employ/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   location: ^5.0.3
   flutter_polyline_points: ^2.0.0
   custom_info_window: ^1.0.1 
+  firebase_crashlytics: ^3.4.18
+  firebase_analytics: ^10.8.9
   flutter_svg: ^2.0.10+1
   
 dev_dependencies:
