--- a/aid_employ/pubspec.yaml
+++ b/aid_employ/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   location: ^5.0.3
   flutter_polyline_points: ^2.0.0
   custom_info_window: ^1.0.1 
+  flutter_svg: ^2.0.10+1
   
 dev_dependencies:
   flutter_test:
