chore : added ignore for venv and service keys of firebae for chatbot

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# chatbot venv
+chatbot/venv
+
+# firebase access
+chatbot/service.json
